--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Layout Template</title>
+  <title>Thruster Diagnostics Visualization</title>
   <script src="lib/jquery-3.6.0.min.js"></script>
   <script src="js/script.js"></script>
 </head>
