--- a/index.html
+++ b/index.html
@@ -15,29 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white border-bottom" aria-label="TopNavbar">
-    <div class="container-xl">
-      <a class="navbar-brand" href="./index.html">
-        <img src="../img/logo/Psyche_Icon_BW-SVG.svg" alt="" width="45" height="45" class="d-inline-block"> Hall Thruster Diagnostics
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarTop">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Overview</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./faraday_probe.html">Faraday Probes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./retarding_analyzer.html">RPA Diagnostics</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div class="nav-wrapper"></div>
 
   <main class="container">
     <div class="text-dark">
