--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -15,29 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white border-bottom" aria-label="TopNavbar">
-    <div class="container-xl">
-      <a class="navbar-brand" href="./index.html">
-        <img src="../img/logo/Psyche_Icon_BW-SVG.svg" alt="" width="45" height="45" class="d-inline-block"> Hall Thruster Diagnostics
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTop" aria-controls="navbarTop" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarTop">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./index.html">Overview</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./faraday_probe.html">Faraday Probes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="./retarding_analyzer.html">RPA Diagnostics</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div class="nav-wrapper"></div>
 
   <div class="container text-dark">
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
@@ -71,6 +49,16 @@
         By varying the bias on this grid, we can map out how many ions have how much energy (i.e., the energy distribution)<br>
         The RPA is a high-pass filter for ion energy
       </p>
+    </div>
+
+    <div class="row justify-content-end">
+      <div class="col-4">
+        <a href="./faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
+            <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
+          </svg>
+        </a>
+      </div>
     </div>
 
     <footer class="container-xl">
