--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -71,16 +71,6 @@
     </div>
   </main>
 
-  <footer class="container-xl">
-    <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0 text-muted"></p>
-
-      <ul class="nav col-md-4 justify-content-end">
-        <li class="nav-item"><a href="https://www.jpl.nasa.gov/missions/psyche" class="nav-link px-2 text-muted">More on Psyche</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">References</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Our Team</a></li>
-      </ul>
-    </div>
-  </footer>
+  <div class="foot-wrapper"></div>
 </body>
 </html>
