make urls work on server

--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Thruster Diagnostics Visualization</title>
-  <script src="../lib/jquery-3.6.0.min.js"></script>
-  <script src="../lib/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="icon" type="image/svg+xml" href="../img/logo/Psyche_Icon_BW-SVG.svg">
-  <script src="../js/script.js"></script>
+  <script src="/lib/jquery-3.6.0.min.js"></script>
+  <script src="/lib/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="icon" type="image/svg+xml" href="/img/logo/Psyche_Icon_BW-SVG.svg">
+  <script src="/js/script.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <div>
         <center>
           <figure>
-            <img class="resizing-image" src="../img/rpa/RPA.png"/>
+            <img class="resizing-image" src="/img/rpa/RPA.png"/>
             <figcaption>example side-view of the retarding probe analyzer</figcaption>
           </figure>
         </center>
@@ -53,7 +53,7 @@
 
     <div class="row justify-content-end">
       <div class="col-4">
-        <a href="./faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
+        <a href="/faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
             <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
           </svg>
