--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -51,9 +51,9 @@
       </p>
     </div>
 
-    <div class="row justify-content-end">
-      <div class="col-4">
-        <a href="/faraday_probe.html" class="btn btn-light learning-btn">Continue Learning
+    <div class="row justify-content-center">
+      <div class="col-2">
+        <a href="#" class="btn btn-light learning-btn">Launch Simulation
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
             <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
           </svg>
