--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" type="image/svg+xml" href="/img/logo/Psyche_Icon_BW-SVG.svg">
-  <script src="/js/script.js"></script>
+  <script src="/js/global.js"></script>
 </head>
 
 <body>
