use compressed webp image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <div class="row">
               <div class="col-sm-6 d-flex">
                 <div class="card">
-                  <img src="/img/home/closeup_thruster_01.png" class="card-img-top" alt=""/>
+                  <picture class="card-img-top">
+                    <source type="image/webp" srcset="/img/home/closeup_thruster_01.webp">
+                    <img src="/img/home/closeup_thruster_01.png" class="card-img-top" alt=""/>
+                  </picture>
                   <div class="card-body">
                     <h5 class="card-title">Electronic Hall Thrusters</h5>
                     <p class="card-text">
