Added styling to RPA page
fixed the styling on the list on the bottom of the page

--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -42,7 +42,7 @@
 		<div class="col-lg-8 mx-auto p-3 py-md-4">
 			<p class="h2">How it works</p>
 			<p class="lead">
-			<ul>
+			<ul class="lead">
 				<li>Plasma (ions + electrons) enters the front of the RPA through the floating grid</li>
 				<li>Electrons are stopped by the electron repulsion grid (which is negatively biased) while the ions
 					continue
