include new new source

--- a/references.html
+++ b/references.html
@@ -24,21 +24,25 @@
         <div style="text-indent:-36px; padding-left: 36px;">
           <p>All information was obtained from the sources stated below.</p>
           <p class="fs-5">
-            Daniel L. Brown, Mitchell L. R. Walker, James Szabo, Wensheng Huang, and John E. Foster "Recommended
+            [1] Daniel L. Brown, Mitchell L. R. Walker, James Szabo, Wensheng Huang, and John E. Foster "Recommended
             Practice for Use of Faraday Probes in Electric Propulsion Testing", Journal of Propulsion and Power 2017
             33:3, 582-613
           </p>
           <p class="fs-5">
-            Goebel, Dan M, and Ira Katz. “Ion and Hall Thrusters.” Fundamentals of Electric Propulasion, 30 July 2008, pp. 325–392., https://doi.org/10.1002/9780470436448.ch7. 
+            [2] Frieman, J.D., "Characterization of Background Neutral Flows in Vacuum Test Facilities and Impacts on Hall Effect Thruster Operation", 2017, Chapter 1,4 
           </p>
           <p class="fs-5">
-            Shu T. Lai and Catherine Miller , "Retarding potential analyzer: Principles, designs, and space
+            [3] Goebel, Dan M, and Ira Katz. “Ion and Hall Thrusters.” Fundamentals of Electric Propulasion, 30 July 2008, pp. 325–392., https://doi.org/10.1002/9780470436448.ch7. 
+          </p>
+          <p class="fs-5">
+            [4] Shu T. Lai and Catherine Miller , "Retarding potential analyzer: Principles, designs, and space
             applications", AIP Advances 10, 095324 (2020) https://doi.org/10.1063/5.0014266
           </p>
           <p class="fs-5">
-            T. M. Jack, "Plasma diagnostics with a retarding potential analyzer," IEEE Conference Record - Abstracts.
+            [5] T. M. Jack, "Plasma diagnostics with a retarding potential analyzer," IEEE Conference Record - Abstracts.
             1996 IEEE International Conference on Plasma Science, 1996, pp. 113-, doi: 10.1109/PLASMA.1996.550250.
           </p>
+          
         </div>
       </div>
     </div>
