--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -25,10 +25,14 @@
 		<div class="col-lg-8 mx-auto p-3 py-md-4">
 			<p class="h2">Retarding Potential Analyzers</p>
 			<p class="lead">
-				At the lowest level, the Retarding Probe Analyzer (RPA) is a series of mesh grids inside of a metal housing. Its
-				main function is to measure the energy of the ions in the thruster plume. The goal is to create a distribution
-				of the energy of the ions in the plume. Each of the four meshes, the floating grid, electron repulsion grid, ion
-				retarding grid, and electron suppression grid, each have a specific purpose in creating this distribution.
+				At the lowest level, the Retarding Probe Analyzer (RPA) is a series of mesh grids inside of a metal
+				housing. Its
+				main function is to measure the energy of the ions in the thruster plume. The goal is to create a
+				distribution
+				of the energy of the ions in the plume. Each of the four meshes, the floating grid, electron repulsion
+				grid, ion
+				retarding grid, and electron suppression grid, each have a specific purpose in creating this
+				distribution.
 			</p>
 		</div>
 		<div>
@@ -45,10 +49,15 @@
 				<li>Electrons are stopped by the electron repulsion grid (which is negatively biased) while the ions
 					continue
 				</li>
-				<li>Since the ion retarding grid is biased positively, ions with high enough energy pass through the grid
-					and are measured by the collector while those with lower energy are stopped</li>
-				<li>By varying the bias on the grid, we can map out how many ions have a certain amount energy (i.e., the energy
-					distribution)</li>
+				<li>Since the ion retarding grid is biased positively, ions with high enough energy pass through the
+					grid
+					and are measured by the collector while those with lower energy are stopped <sup><a
+							href="/references.html">[3]</a></sup>
+				</li>
+				<li>By varying the bias on the grid, we can map out how many ions have a certain amount energy (i.e.,
+					the energy
+					distribution) <sup><a href="/references.html">[2]</a></sup>
+				</li>
 				<li>In other words, the RPA is a high-pass filter for ions in order to gauge their energy level</li>
 			</ul>
 			</p>
@@ -56,10 +65,11 @@
 
 		<div class="row justify-content-center">
 			<div class="col-2">
-				<a href="/simulation.html" class="btn btn-light learning-btn" target="_blank" rel="noopener noreferrer">Launch
+				<a href="/simulation.html" class="btn btn-light learning-btn" target="_blank"
+					rel="noopener noreferrer">Launch
 					Simulation
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right"
-						viewBox="0 0 16 16">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+						class="bi bi-caret-right" viewBox="0 0 16 16">
 						<path
 							d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
 					</svg>
