--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -48,10 +48,10 @@
 				<li>Plasma (ions + electrons) enters the front of the RPA through the floating grid</li>
 				<li>Electrons are stopped by the electron repulsion grid (which is negatively biased) while the ions
 					continue
+					<sup><a href="/references.html">[4]</a></sup>
 				</li>
 				<li>Since the ion retarding grid is biased positively, ions with high enough energy pass through the
-					grid
-					and are measured by the collector while those with lower energy are stopped <sup><a
+					grid and are measured by the collector while those with lower energy are stopped <sup><a
 							href="/references.html">[4]</a></sup>
 				</li>
 				<li>By varying the bias on the grid, we can map out how many ions have a certain amount energy (i.e.,
