--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/styles.css" />
 	<link rel="icon" type="image/svg+xml" href="/img/logo/Psyche_Icon_BW-SVG.svg">
+	<script src="/js/rpa-vis.js"></script>
 	<script src="/js/global.js"></script>
 </head>
 
@@ -18,9 +19,25 @@
 	<div class="nav-wrapper"></div>
 
 	<div class="container text-dark">
-		<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center main-top">
-			<p class="display-3 fw-bold text-light">Hall Thruster Diagnostics</p>
-			<p class="fs-4 text-light">Perfecting the Thrusters for Psyche </p>
+		<div class="container">
+			<div class="row">
+				<main class="container" style="text-align:center">
+					<div id="unity-container" class="unity-desktop">
+					  <canvas id="unity-canvas" width=960 height=600></canvas>
+					  <div id="unity-loading-bar">
+						<div id="unity-logo"></div>
+						<div id="unity-progress-bar-empty">
+						  <div id="unity-progress-bar-full"></div>
+						</div>
+					  </div>
+					  <div id="unity-warning"> </div>
+					  <div id="unity-footer">
+						<div id="unity-webgl-logo"></div>
+						<div id="unity-fullscreen-button"></div>
+					  </div>
+					</div>
+				  </main>
+			</div>
 		</div>
 		<div class="col-lg-8 mx-auto p-3 py-md-4">
 			<p class="h2">Retarding Potential Analyzers</p>
@@ -65,7 +82,7 @@
 
 		<div class="row justify-content-center">
 			<div class="col-2">
-				<a href="/simulation.html" class="btn btn-light learning-btn" target="_blank"
+				<a href="/rpa-simulation.html" class="btn btn-light learning-btn" target="_blank"
 					rel="noopener noreferrer">Launch
 					Simulation
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
