--- a/faraday-simulation.html
+++ b/faraday-simulation.html
@@ -16,7 +16,7 @@
 <body>
   <main class="container" style="text-align:center">
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
