--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -93,7 +93,7 @@
       </ul>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center py-md-2">
 			<div class="col-2">
 				<a href="/faraday-simulation.html" class="btn btn-light learning-btn" target="_blank"
 					rel="noopener noreferrer">Launch
