--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -80,7 +80,7 @@
 			</p>
 		</div>
 
-		<div class="row justify-content-center">
+		<div class="row justify-content-center py-md-2">
 			<div class="col-2">
 				<a href="/rpa-simulation.html" class="btn btn-light learning-btn" target="_blank"
 					rel="noopener noreferrer">Launch
