add photo references

--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -50,7 +50,10 @@
     <div>
       <figure>
         <img class="resizing-image" src="/img/faraday_probe/Faraday_Probe.png" />
-        <figcaption>Faraday Probe. Coin for scale.</figcaption>
+        <figcaption>Faraday Probe. Coin for scale.
+          <br>
+          <p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Frieman</a></p>
+        </figcaption>
       </figure>
     </div>
     <div class="col-lg-8 mx-auto p-3 py-md-4">
@@ -65,6 +68,8 @@
       <figure>
         <img class="resizing-image" src="/img/faraday_probe/Probe_Diagram.png" />
         <figcaption>Diagram of the Faraday Probe components</ /figcaption>
+          <br>
+					<p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Frieman</a></p>
       </figure>
     </div>
     <div class="col-lg-8 mx-auto p-3 py-md-4">
