--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
             <div class="row">
               <div class="col-sm-6 d-flex">
                 <div class="card">
-                  <picture class="card-img-top">
-                    <source type="image/webp" srcset="/img/home/closeup_thruster_01.webp">
-                    <img src="/img/home/closeup_thruster_01.png" class="card-img-top" alt=""/>
-                  </picture>
+                  <img src="/img/home/closeup_thruster_01.png" class="card-img-top" alt=""/>
                   <div class="card-body">
                     <h5 class="card-title">Electronic Hall Thrusters</h5>
                     <p class="card-text">
@@ -61,6 +58,8 @@
                     <h5 class="card-title">Thruster Installation</h5>
                     <p class="card-text">
                       During July 2021, NASA Engineers were preparing to install four Hall Thrusters on the spacecraft. Each thruster is integrated underneath these protective red covers.
+                      <br><br>
+                      Photo from <a href="https://psyche.asu.edu/galleries/images/?ajax=1" target="_blank">Psyche ASU</a>
                     </p>
                   </div>
                 </div>
