--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -55,7 +55,10 @@
 		<div>
 			<figure>
 				<img class="resizing-image" src="/img/rpa/RPA.png" />
-				<figcaption>example side-view of the retarding probe analyzer</figcaption>
+				<figcaption>example side-view of the retarding probe analyzer
+					<br>
+					<p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Frieman</a></p>
+				</figcaption>
 			</figure>
 		</div>
 		<div class="col-lg-8 mx-auto p-3 py-md-4">
