--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -52,7 +52,7 @@
         <img class="resizing-image" src="/img/faraday_probe/Faraday_Probe.png" />
         <figcaption>Faraday Probe. Coin for scale.
           <br>
-          <p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Frieman</a></p>
+          <p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Jason Frieman</a></p>
         </figcaption>
       </figure>
     </div>
