--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -57,7 +57,7 @@
 				<img class="resizing-image" src="/img/rpa/RPA.png" />
 				<figcaption>example side-view of the retarding probe analyzer
 					<br>
-					<p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Frieman</a></p>
+					<p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Jason Frieman</a></p>
 				</figcaption>
 			</figure>
 		</div>
