--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                     <h5 class="card-title">Electronic Hall Thrusters</h5>
                     <p class="card-text">
                       An example of an Ionic Plume from the Hall Thruster. This blue plume is made from ions which could damage the spacecraft if diagnostics are not used to understand how well the thruster is working.
+                      <br><br>
+                      Photo from <a href="https://sec353ext.jpl.nasa.gov/ep/multimedia.html" target="_blank">Psyche ASU</a>
                     </p>
                   </div>
                 </div>
