--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p class="card-text">
                       An example of an ion plume from the Hall Thruster. This blue plume is made of ions which could damage the spacecraft if diagnostics are not used to understand how well the thruster is working.
                       <br><br>
-                      Photo from <a href="https://sec353ext.jpl.nasa.gov/ep/multimedia.html" target="_blank">Psyche ASU</a>
+                      Photo from <a href="https://sec353ext.jpl.nasa.gov/ep/multimedia.html" target="_blank">NASA JPL</a>
                     </p>
                   </div>
                 </div>
