--- a/faraday-simulation.html
+++ b/faraday-simulation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RPA Visualization</title>
+  <title>Faraday Probe Visualization</title>
   <link rel="shortcut icon" href="UnityAnimations/TemplateData/favicon.ico">
   <link rel="stylesheet" href="UnityAnimations/TemplateData/style.css">
   <script src="/lib/jquery-3.6.0.min.js"></script>
