Corrections, started team memebrs in reference, and readme progress

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             10,000°F and are travelling faster than 20,000 MPH. Therefore, it is important to understand and measure how this plume of ions is being ejected. There are two important diagnostics used for studying
             the plume, the Faraday Probe Diagnostics and the Retarding Potential Analyzer.
           </p>
+
+          <!-- Electron Hall Thrusters and Thruster Installation -->
           <div class="container">
             <div class="row">
               <div class="col-sm-6 d-flex">
@@ -69,6 +71,7 @@
             </div>
           </div>
 
+        <!-- Faraday Probe and Retarding Potentiasl Analyzer -->
           <hr class=""/>
           <p class="h2">Faraday Probes</p>
           <p class="fs-5">
