--- a/references.html
+++ b/references.html
@@ -46,8 +46,36 @@
         </div>
       </div>
     </div>
-  </main>
 
+    <!-- Team Members -->
+    <hr class=""/>
+    <center>
+      <p class="h2">Capstone Team</p>
+    </center>
+
+    <!--
+    Horizontal ordering of names but it is compressing together
+
+  Can do this: https://www.foolishdeveloper.com/2021/05/responsive-our-team-section-using-html.html
+    -->
+    <!--
+    <ul class="list-group list-group-horizontal">
+      <li><p class="fs-5">Jacob Burton</p></li>
+      <li><p class="fs-5">Peter Bugala</p></li>
+      <li><p class="fs-5">Tyler Vaillancourt</p></li>
+      <li><p class="fs-5">Albert Schaffer</p</li>
+      <li><p class="fs-5">Anderson Sanchez</p></li>
+      <li><p class="fs-5">Alex Darrah</p></li>
+    </ul>
+-->
+    <p class="fs-5">Jacob Burton</p>
+    <p class="fs-5">Peter Bugala</p>
+    <p class="fs-5">Alex Darrah</p>
+    <p class="fs-5">Albert Schaffer</p>
+    <p class="fs-5">Anderson Sanchez</p>
+    <p class="fs-5">Tyler Vaillancourt</p>
+
+  </main>
   <div class="foot-wrapper"></div>
 </body>
 
