--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -74,6 +74,9 @@
 					grid and are measured by the collector while those with lower energy are stopped <sup><a
 							href="/references.html">[4]</a></sup>
 				</li>
+				<li>Electrons that may break free when ions are being collected are sent back to the collector by
+						the Electron Suppression Grid
+				</li>
 				<li>By varying the bias on the grid, we can map out how many ions have a certain amount energy (i.e.,
 					the energy
 					distribution) <sup><a href="/references.html">[2]</a></sup>
