Grammar and ReadMe changes

--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -43,7 +43,7 @@
       <p class="h2">Faraday Probe</p>
       <p class="lead">
         The Faraday Probe is a small device used to measure the ion current density distribution, or the number of ions
-        that exist at a location, of the Hall thrusters. The probe consists of a metal cylinder, or "guard," that houses
+        that exist at a location, in the Hall thruster plume. The probe consists of a metal cylinder, or "guard," that houses
         a flat metal disk, or "collector."
       </p>
     </div>
