--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Hall Thrusters which will be used as the main propulsion system once it has left our atmosphere! Since there will be no chance to test the thrusters in space, different diagnostic tests have been
             devised on Earth to analyze how the thrusters will perform in space. The thrusters exhaust a plume of plasma and ions in order to propel the spacecraft. The ions within this plume are hotter than
             10,000°F and are travelling faster than 20,000 MPH. Therefore, it is important to understand and measure how this plume of ions is being ejected. There are two important diagnostics used for studying
-            the plume, the Faraday Probe Diagnostics and the Retarding Potential Analyzer.
+            the plume, the Faraday Probe and the Retarding Potential Analyzer.
           </p>
 
           <!-- Electron Hall Thrusters and Thruster Installation -->
@@ -91,7 +91,7 @@
           <hr class=""/>
           <p class="h2">Retarding Potential Analyzer</p>
           <p class="fs-5">
-            It is important to know how the plume of ions is shaped, because the electronic thrusters rely on the electrical energy released by Ions. The energy measured within
+            It is important to know how much energy the plume releases, because the electronic thrusters rely on the electrical energy released by Ions. The energy measured within
             this test shows how efficient the thruster will be when it is in use. Click below to learn more about how the Retarding Potential Analyzer (RPA) works and its importance
             to the testing of Hall Thrusters.
           </p>
