--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -59,8 +59,8 @@
     <div class="col-lg-8 mx-auto p-3 py-md-4">
       <p class="h3">How It Works</p>
       <p class="lead">
-        The probe is swept in an arc throughout the plume created by the Hall Thrusters. Ions are detected at the
-        collector, then the ion current collected is measured as the probe is travelling. A high ion current at a
+        The probe is swept in an arc throughout the plume created by the Hall Thrusters. As the probe is travelling,
+        ions are detected at the collector, then the ion current is measured. A high ion current at a
         certain position in the plume means that there are many ions being received over a given period of time in that
         location.
         <sup><a href="/references.html">[2]</a></sup>
@@ -89,7 +89,7 @@
       </ul>
       <p class="lead">
         The diagnostics produced by the probes can also be useful in applications outside of spacecraft propulsion such
-        as: space plasma experiments, dense plasma focus experiments, and laser-produced plasma.
+        as:
       </p>
       <ul class="lead">
         <li>Space plasma experiments</li>
