--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class="">
           <p class="h2">Overview</p>
           <p class="fs-5">
-            When the Psyche Mission launches in 2022, it will be the first time humankind will be visiting an entirely metal asteroid. But how will we get there? The Psyche Mission is equipped with electric
-            Hall Thrusters which will be used as the main propulsion system once it has left our atmosphere! Since there will be no chance to test the thrusters in space, different diagnostic tests have been
-            devised on Earth to analyze how the thrusters will perform in space. The thrusters exhaust a plume of plasma and ions in order to propel the spacecraft. The ions within this plume are hotter than
-            10,000°F and are travelling faster than 20,000 MPH. Therefore, it is important to understand and measure how this plume of ions is being ejected. There are two important diagnostics used for studying
-            the plume, the Faraday Probe and the Retarding Potential Analyzer.
+            When the Psyche Mission launches in 2022, it will be the first time humankind will be visiting an entirely metal asteroid. But how will we get there? The Psyche Mission is equipped
+            with electric Hall Thrusters which will be used as the main propulsion system once it has left our atmosphere! Since there will be no chance to test the thrusters in space, different
+            diagnostic tests have been devised on Earth to analyze how the thrusters will perform in space. The thrusters exhaust a plume of plasma and ions to propel the spacecraft. The ions
+            within this plume are hotter than 10,000°F and are travelling faster than 20,000 MPH. Therefore, it is important to understand and measure how this plume of ions is being ejected.
+            There are two important diagnostics used for studying the plume: the Faraday Probe and the Retarding Potential Analyzer.
           </p>
 
           <!-- Electron Hall Thrusters and Thruster Installation -->
@@ -48,7 +48,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Electric Hall Thrusters</h5>
                     <p class="card-text">
-                      An example of an ion plume from the Hall Thruster. This blue plume is made of ions which could damage the spacecraft if diagnostics are not used to understand how well the thruster is working.
+                      An example of an ion plume from the Hall Thruster. This blue plume is made of ions which could damage the spacecraft. Diagnostics must be used to understand how well the thruster is working.
                       <br><br>
                       Photo from <a href="https://sec353ext.jpl.nasa.gov/ep/multimedia.html" target="_blank">NASA JPL</a>
                     </p>
@@ -61,7 +61,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Thruster Installation</h5>
                     <p class="card-text">
-                      During July 2021, NASA Engineers were preparing to install four Hall Thrusters on the spacecraft. Each thruster is integrated underneath these protective red covers.
+                      In July 2021, NASA Engineers were preparing to install four Hall Thrusters on the spacecraft. Each thruster is integrated underneath these protective red covers.
                       <br><br>
                       Photo from <a href="https://psyche.asu.edu/galleries/images/?ajax=1" target="_blank">Psyche ASU</a>
                     </p>
@@ -75,7 +75,7 @@
           <hr class=""/>
           <p class="h2">Faraday Probes</p>
           <p class="fs-5">
-            A faraday probe is a small cylindrical shaped object that can be used to determine the local ion density of electric propulsion plumes.
+            A Faraday probe is a small cylindrical shaped object that can be used to determine the local ion density of electric propulsion plumes.
             With this information one can determine the divergence angle of the thruster plume. Click below to learn more about how the Faraday Probe works and its importance to the testing of Hall Thrusters.
           </p>
           <div class="row justify-content-end">
@@ -91,7 +91,7 @@
           <hr class=""/>
           <p class="h2">Retarding Potential Analyzer</p>
           <p class="fs-5">
-            It is important to know how much energy the plume releases, because the electronic thrusters rely on the electrical energy released by Ions. The energy measured within
+            It is important to know how much energy the plume releases because the electronic thrusters rely on the electrical energy released by Ions. The energy measured within
             this test shows how efficient the thruster will be when it is in use. Click below to learn more about how the Retarding Potential Analyzer (RPA) works and its importance
             to the testing of Hall Thrusters.
           </p>
