--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -43,12 +43,11 @@
 			<p class="h2">Retarding Potential Analyzers</p>
 			<p class="lead">
 				At the lowest level, the Retarding Probe Analyzer (RPA) is a series of mesh grids inside of a metal
-				housing. Its
-				main function is to measure the energy of the ions in the thruster plume. The goal is to create a
+				housing. It measures the energy of the ions in the thruster plume. The goal is to create a
 				distribution
 				of the energy of the ions in the plume. Each of the four meshes, the floating grid, electron repulsion
 				grid, ion
-				retarding grid, and electron suppression grid, each have a specific purpose in creating this
+				retarding grid, and electron suppression grid, have a specific purpose in creating this
 				distribution.
 			</p>
 		</div>
@@ -66,7 +65,7 @@
 			<p class="lead">
 			<ul class="lead">
 				<li>Plasma (ions + electrons) enters the front of the RPA through the floating grid</li>
-				<li>Electrons are stopped by the electron repulsion grid (which is negatively biased) while the ions
+				<li>Electrons are stopped by the electron repulsion grid, which is negatively biased, while the ions
 					continue
 					<sup><a href="/references.html">[4]</a></sup>
 				</li>
