--- a/faraday-simulation.html
+++ b/faraday-simulation.html
@@ -8,9 +8,9 @@
   <title>Faraday Probe Visualization</title>
   <link rel="shortcut icon" href="UnityAnimations/TemplateData/favicon.ico">
   <link rel="stylesheet" href="UnityAnimations/TemplateData/style.css">
-  <script src="/lib/jquery-3.6.0.min.js"></script>
-  <script src="/lib/bootstrap.bundle.min.js"></script>
-  <script src="/js/faraday-vis.js"></script>
+  <script src="lib/jquery-3.6.0.min.js"></script>
+  <script src="lib/bootstrap.bundle.min.js"></script>
+  <script src="js/faraday-vis.js"></script>
 </head>
 
 <body>
