--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Thruster Diagnostics Visualization</title>
-  <script src="/lib/jquery-3.6.0.min.js"></script>
-  <script src="/lib/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="icon" type="image/svg+xml" href="/img/logo/Psyche_Icon_BW-SVG.svg">
-  <script src="/js/global.js"></script>
+  <script src="lib/jquery-3.6.0.min.js"></script>
+  <script src="lib/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" type="image/svg+xml" href="img/logo/Psyche_Icon_BW-SVG.svg">
+  <script src="js/global.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             <div class="row">
               <div class="col-sm-6 d-flex">
                 <div class="card">
-                  <img src="/img/home/closeup_thruster_01.png" class="card-img-top" alt=""/>
+                  <img src="img/home/closeup_thruster_01.png" class="card-img-top" alt=""/>
                   <div class="card-body">
                     <h5 class="card-title">Electric Hall Thrusters</h5>
                     <p class="card-text">
@@ -57,7 +57,7 @@
               </div>
               <div class="col-sm-6 d-flex">
                 <div class="card">
-                  <img src="/img/home/nasa_lab_02.png" class="card-img-top" alt=""/>
+                  <img src="img/home/nasa_lab_02.png" class="card-img-top" alt=""/>
                   <div class="card-body">
                     <h5 class="card-title">Thruster Installation</h5>
                     <p class="card-text">
