--- a/rpa-simulation.html
+++ b/rpa-simulation.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RPA Visualization</title>
-  <script src="/lib/jquery-3.6.0.min.js"></script>
-  <script src="/lib/bootstrap.bundle.min.js"></script>
+  <script src="lib/jquery-3.6.0.min.js"></script>
+  <script src="lib/bootstrap.bundle.min.js"></script>
   <link rel="shortcut icon" href="UnityAnimations/TemplateData/favicon.ico">
   <link rel="stylesheet" href="UnityAnimations/TemplateData/style.css">
-  <script src="/js/rpa-vis.js"></script>
+  <script src="js/rpa-vis.js"></script>
 </head>
 
 <body>
