--- a/faraday_probe.html
+++ b/faraday_probe.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Thruster Diagnostics Visualization</title>
-  <script src="/lib/jquery-3.6.0.min.js"></script>
-  <script src="/lib/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="icon" type="image/svg+xml" href="/img/logo/Psyche_Icon_BW-SVG.svg">
-  <script src="/js/global.js"></script>
-  <script src="/js/faraday-vis.js"></script>
+  <script src="lib/jquery-3.6.0.min.js"></script>
+  <script src="lib/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" type="image/svg+xml" href="img/logo/Psyche_Icon_BW-SVG.svg">
+  <script src="js/global.js"></script>
+  <script src="js/faraday-vis.js"></script>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     </div>
     <div>
       <figure>
-        <img class="resizing-image" src="/img/faraday_probe/Faraday_Probe.png" />
+        <img class="resizing-image" src="img/faraday_probe/Faraday_Probe.png" />
         <figcaption>Faraday Probe. Coin for scale.
           <br>
           <p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Jason Frieman</a></p>
@@ -66,7 +66,7 @@
         <sup><a href="/references.html">[2]</a></sup>
       </p>
       <figure>
-        <img class="resizing-image" src="/img/faraday_probe/Probe_Diagram.png" />
+        <img class="resizing-image" src="img/faraday_probe/Probe_Diagram.png" />
         <figcaption>Diagram of the Faraday Probe components</ /figcaption>
           <br>
 					<p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Frieman</a></p>
