--- a/retarding_analyzer.html
+++ b/retarding_analyzer.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Thruster Diagnostics Visualization</title>
-	<script src="/lib/jquery-3.6.0.min.js"></script>
-	<script src="/lib/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/styles.css" />
-	<link rel="icon" type="image/svg+xml" href="/img/logo/Psyche_Icon_BW-SVG.svg">
-	<script src="/js/rpa-vis.js"></script>
-	<script src="/js/global.js"></script>
+	<script src="lib/jquery-3.6.0.min.js"></script>
+	<script src="lib/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="icon" type="image/svg+xml" href="img/logo/Psyche_Icon_BW-SVG.svg">
+	<script src="js/rpa-vis.js"></script>
+	<script src="js/global.js"></script>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
 		</div>
 		<div>
 			<figure>
-				<img class="resizing-image" src="/img/rpa/RPA.png" />
+				<img class="resizing-image" src="img/rpa/RPA.png" />
 				<figcaption>example side-view of the retarding probe analyzer
 					<br>
 					<p style="color:gray">Photo courtesy of <a href="https://mwalker.gatech.edu/papers/FRIEMAN-DISSERTATION-2017.pdf" target="_blank">Dr. Jason Frieman</a></p>
