--- a/faraday-simulation.html
+++ b/faraday-simulation.html
@@ -8,8 +8,7 @@
   <title>Faraday Probe Visualization</title>
   <link rel="shortcut icon" href="UnityAnimations/TemplateData/favicon.ico">
   <link rel="stylesheet" href="UnityAnimations/TemplateData/style.css">
-  <script src="lib/jquery-3.6.0.min.js"></script>
-  <script src="lib/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js" crossorigin="anonymous"></script>
   <script src="js/faraday-vis.js"></script>
 </head>
 
