align names and remove border

--- a/references.html
+++ b/references.html
@@ -48,17 +48,15 @@
     </div>
 
     <!-- Team Members -->
-    <hr class=""/>
-    <center>
-      <p class="h2">Capstone Team</p>
-    </center>
+    <hr/>
+    <p class="h2 text-center">Capstone Team</p>
     <ul class="list-group list-group-horizontal list-group-flush">
-      <li class="list-group-item"><p class="fs-5">Jacob Burton</p></li>
-      <li class="list-group-item"><p class="fs-5">Peter Bugala</p></li>
-      <li class="list-group-item"><p class="fs-5">Tyler Vaillancourt</p></li>
-      <li class="list-group-item"><p class="fs-5">Albert Schaffer</p</li>
-      <li class="list-group-item"><p class="fs-5">Anderson Sanchez</p></li>
-      <li class="list-group-item"><p class="fs-5">Alex Darrah</p></li>
+      <li class="list-group-item flex-fill"><p class="fs-5">Jacob Burton</p></li>
+      <li class="list-group-item flex-fill"><p class="fs-5">Peter Bugala</p></li>
+      <li class="list-group-item flex-fill"><p class="fs-5">Tyler Vaillancourt</p></li>
+      <li class="list-group-item flex-fill"><p class="fs-5">Albert Schaffer</p</li>
+      <li class="list-group-item flex-fill"><p class="fs-5">Anderson Sanchez</p></li>
+      <li class="list-group-item flex-fill"><p class="fs-5">Alex Darrah</p></li>
     </ul>
   </main>
   <div class="foot-wrapper"></div>
